--- a/homework/Day_002_HW.ipynb
+++ b/homework/Day_002_HW.ipynb
@@ -21,7 +21,9 @@
    "metadata": {},
    "source": [
     "## 作業\n",
-    "請找出一個你認為機器學習可以發光發熱的領域並闡述原因? "
+    "請找出一個你認為機器學習可以發光發熱的領域並闡述原因? \n",
+    "    Ans: \"透過機械學習, 雖然一開始成本高, 但當技術純熟系統完整時, 可以省去相當多的人力, 在任何產業上人為失誤是最常見的, 所以當機械學習去取代人為的行為誤差一定也會減少, 損失也會相對較少\"\n",
+    "    "
    ]
   },
   {
@@ -50,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
