--- a/homework/Day_006_HW.ipynb
+++ b/homework/Day_006_HW.ipynb
@@ -1,63 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# [作業目標]\n",
-    "- 仿造範例的 One Hot Encoding, 將指定的資料進行編碼"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# [作業重點]\n",
-    "- 將 sub_train 進行 One Hot Encoding 編碼 (In[4], Out[4])"
+    "import os \n",
+    "import numpy as np \n",
+    "import pandas as pd "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "lh9gyloHVblR"
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "z4iLB9cKVblV"
-   },
-   "outputs": [],
-   "source": [
-    "# 設定 data_path, 並讀取 app_train\n",
-    "dir_data = 'D:/python yun/day005 data/Part01'\n",
-    "f_app_train = os.path.join(dir_data, 'application_train.csv')\n",
-    "app_train = pd.read_csv(f_app_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "d5IeEcPVVblq"
-   },
-   "source": [
-    "## 作業\n",
-    "將下列部分資料片段 sub_train 使用 One Hot encoding, 並觀察轉換前後的欄位數量 (使用 shape) 與欄位名稱 (使用 head) 變化"
+    "dir_data='C:/Users/DELL/Desktop/Github/Github/100days/100days/' #路徑\n",
+    "f_app_train=os.path.join(dir_data, 'application_train.csv') #os為模塊, os.path為路徑操作\n",
+    "\n",
+    "app_train = pd.read_csv(f_app_train) #可以读取CSV"
    ]
   },
   {
@@ -117,10 +80,6 @@
        "      <th>4</th>\n",
        "      <td>THURSDAY</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>WEDNESDAY</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -131,8 +90,7 @@
        "1                     MONDAY\n",
        "2                     MONDAY\n",
        "3                  WEDNESDAY\n",
-       "4                   THURSDAY\n",
-       "5                  WEDNESDAY"
+       "4                   THURSDAY"
       ]
      },
      "execution_count": 13,
@@ -141,16 +99,23 @@
     }
    ],
    "source": [
-    "sub_train = pd.DataFrame(app_train['WEEKDAY_APPR_PROCESS_START'])\n",
-    "print(sub_train.shape) #功能是查看矩阵或者数组的维数\n",
-    "sub_train.head(6)#顯示前五筆資料, 也可在括號內寫數字"
+    "sub_train=pd.DataFrame(app_train['WEEKDAY_APPR_PROCESS_START'])\n",
+    "print(sub_train.shape)\n",
+    "sub_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(307511, 7)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -172,337 +137,113 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>WEEKDAY_APPR_PROCESS_START</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_FRIDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_MONDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_SATURDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_SUNDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_THURSDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_TUESDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_WEDNESDAY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307481</th>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307482</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307483</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307484</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307485</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307486</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307487</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307488</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307489</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307490</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307491</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307492</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307493</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307494</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307495</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307496</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307497</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307498</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307499</th>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307500</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307501</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307502</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307503</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307504</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307505</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307506</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307507</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307508</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307509</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307510</th>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>307511 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        WEEKDAY_APPR_PROCESS_START\n",
-       "0                                6\n",
-       "1                                1\n",
-       "2                                1\n",
-       "3                                6\n",
-       "4                                4\n",
-       "5                                6\n",
-       "6                                3\n",
-       "7                                1\n",
-       "8                                6\n",
-       "9                                4\n",
-       "10                               2\n",
-       "11                               0\n",
-       "12                               0\n",
-       "13                               4\n",
-       "14                               1\n",
-       "15                               2\n",
-       "16                               4\n",
-       "17                               1\n",
-       "18                               0\n",
-       "19                               1\n",
-       "20                               0\n",
-       "21                               1\n",
-       "22                               4\n",
-       "23                               0\n",
-       "24                               4\n",
-       "25                               2\n",
-       "26                               1\n",
-       "27                               2\n",
-       "28                               6\n",
-       "29                               5\n",
-       "...                            ...\n",
-       "307481                           0\n",
-       "307482                           4\n",
-       "307483                           1\n",
-       "307484                           1\n",
-       "307485                           2\n",
-       "307486                           2\n",
-       "307487                           6\n",
-       "307488                           6\n",
-       "307489                           0\n",
-       "307490                           2\n",
-       "307491                           2\n",
-       "307492                           0\n",
-       "307493                           1\n",
-       "307494                           1\n",
-       "307495                           6\n",
-       "307496                           4\n",
-       "307497                           4\n",
-       "307498                           1\n",
-       "307499                           5\n",
-       "307500                           0\n",
-       "307501                           6\n",
-       "307502                           1\n",
-       "307503                           2\n",
-       "307504                           6\n",
-       "307505                           1\n",
-       "307506                           4\n",
-       "307507                           1\n",
-       "307508                           4\n",
-       "307509                           6\n",
-       "307510                           4\n",
+       "   WEEKDAY_APPR_PROCESS_START_FRIDAY  WEEKDAY_APPR_PROCESS_START_MONDAY  \\\n",
+       "0                                  0                                  0   \n",
+       "1                                  0                                  1   \n",
+       "2                                  0                                  1   \n",
+       "3                                  0                                  0   \n",
+       "4                                  0                                  0   \n",
        "\n",
-       "[307511 rows x 1 columns]"
+       "   WEEKDAY_APPR_PROCESS_START_SATURDAY  WEEKDAY_APPR_PROCESS_START_SUNDAY  \\\n",
+       "0                                    0                                  0   \n",
+       "1                                    0                                  0   \n",
+       "2                                    0                                  0   \n",
+       "3                                    0                                  0   \n",
+       "4                                    0                                  0   \n",
+       "\n",
+       "   WEEKDAY_APPR_PROCESS_START_THURSDAY  WEEKDAY_APPR_PROCESS_START_TUESDAY  \\\n",
+       "0                                    0                                   0   \n",
+       "1                                    0                                   0   \n",
+       "2                                    0                                   0   \n",
+       "3                                    0                                   0   \n",
+       "4                                    1                                   0   \n",
+       "\n",
+       "   WEEKDAY_APPR_PROCESS_START_WEDNESDAY  \n",
+       "0                                     1  \n",
+       "1                                     0  \n",
+       "2                                     0  \n",
+       "3                                     1  \n",
+       "4                                     0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "labelencoder = LabelEncoder()\n",
-    "data_le=pd.DataFrame(app_train['WEEKDAY_APPR_PROCESS_START'])\n",
-    "data_le['WEEKDAY_APPR_PROCESS_START'] = labelencoder.fit_transform(data_le['WEEKDAY_APPR_PROCESS_START'])\n",
-    "data_le"
+    "#one hot encode\n",
+    "\n",
+    "app_train = pd.get_dummies(app_train)\n",
+    "\n",
+    "print(app_train.shape)\n",
+    "app_train.head()\n",
+    "#print(app_train['yun2'].head())"
    ]
   },
   {
@@ -510,15 +251,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(app_train['WEEKDAY_APPR_PROCESS_START_FRIDAY'].head())\n",
+    "print(app_train['WEEKDAY_APPR_PROCESS_START_MONDAY'].head())\n",
+    "print(app_train['WEEKDAY_APPR_PROCESS_START_SATURDAY'].head())\n",
+    "print(app_train['WEEKDAY_APPR_PROCESS_START_SATURDAY'].head())\n",
+    "print(app_train['WEEKDAY_APPR_PROCESS_START_SUNDAY'].head())\n",
+    "print(app_train['WEEKDAY_APPR_PROCESS_START_THURSDAY'].head())\n",
+    "print(app_train['WEEKDAY_APPR_PROCESS_START_TUESDAY'].head())\n",
+    "print(app_train['WEEKDAY_APPR_PROCESS_START_TUESDAY'].head())"
+   ]
   }
  ],
  "metadata": {
-  "colab": {
-   "name": "Day_004_column_data_type.ipynb",
-   "provenance": [],
-   "version": "0.3.2"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -538,5 +283,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
